Scrollbar placement and mini sidebar icon position fixed

--- a/team-trakking-frontend/src/index.css
+++ b/team-trakking-frontend/src/index.css
@@ -175,5 +175,4 @@
   }
 }
 html {
-  scrollbar-gutter: stable;
 }
